
[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_individually - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_individually#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_specified_together - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_a_couple_of_specific_extractors_enabled_specified_together#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_an_extractor_that_does_not_exist - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_an_extractor_that_does_not_exist#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_one_specific_extractor_disabled - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_one_specific_extractor_disabled#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_one_specific_extractor_enabled_and_the_defaults - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "alpine-baselayout",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-baselayout-data",
          "ecosystem": "Alpine"
        },
        "version": "3.4.0-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "alpine-keys",
          "ecosystem": "Alpine"
        },
        "version": "2.4-r1"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    },
    {
      "query": {
        "package": {
          "name": "apk-tools",
          "ecosystem": "Alpine"
        },
        "version": "2.12.10-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "busybox-binsh",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ca-certificates-bundle",
          "ecosystem": "Alpine"
        },
        "version": "20220614-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libc-utils",
          "ecosystem": "Alpine"
        },
        "version": "0.7.2-r3"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libcrypto3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "libssl3",
          "ecosystem": "Alpine"
        },
        "version": "3.0.8-r0"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2025-26519",
          "modified": "<RFC3339 date with the year 2025>"
        }
      ],
      "query": {
        "package": {
          "name": "musl",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      }
    },
    {
      "query": {
        "package": {
          "name": "musl-utils",
          "ecosystem": "Alpine"
        },
        "version": "1.2.3-r4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "scanelf",
          "ecosystem": "Alpine"
        },
        "version": "1.3.5-r1"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ssl_client",
          "ecosystem": "Alpine"
        },
        "version": "1.36.1-r27"
      },
      "vulns": []
    },
    {
      "vulns": [
        {
          "id": "ALPINE-CVE-2026-22184",
          "modified": "<RFC3339 date with the year 2026>"
        },
        {
          "id": "ALPINE-CVE-2026-27171",
          "modified": "<RFC3339 date with the year 2026>"
        }
      ],
      "query": {
        "package": {
          "name": "zlib",
          "ecosystem": "Alpine"
        },
        "version": "1.2.13-r0"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_directory_with_one_specific_extractor_enabled_and_the_defaults#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "ast",
          "ecosystem": "RubyGems"
        },
        "version": "2.4.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "balanced-match",
          "ecosystem": "npm"
        },
        "version": "1.0.2"
      },
      "vulns": []
    },
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_file_with_one_different_extractor_enabled - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "sentry/sdk",
          "ecosystem": "Packagist"
        },
        "version": "2.0.4"
      },
      "vulns": []
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_file_with_one_specific_extractor_enabled - 1]
{
  "results": [
    {
      "vulns": [
        {
          "id": "GHSA-whgm-jr23-g3j9",
          "modified": "<RFC3339 date with the year 2023>"
        }
      ],
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.1"
      }
    }
  ]
}

---

[Test/cassette_TestCommand_ExplicitExtractors_WithDefaults/TestCommand_ExplicitExtractors_WithDefaults/scanning_file_with_one_specific_extractor_enabled#01 - 1]
{
  "results": [
    {
      "query": {
        "package": {
          "name": "ansi-html",
          "ecosystem": "npm"
        },
        "version": "0.0.8"
      },
      "vulns": []
    }
  ]
}

---
